@@ -206,7 +206,7 @@ clean:
 	rm -f xbin/gcl foo foo.c bin/gclm.bat gmp_all
 	rm -f h/*-linux.defs h/bfd.h h/bfdlink.h h/ansidecl.h h/symcat.h
 	rm -f windows/gcl.iss bin/gcl.bat windows/gcl.ansi.iss windows/install.ansi.lsp
-	rm -f ansi-tests/test_results
+	rm -f ansi-tests/test_results ansi-tests/gazonk*lsp
 	rm -f config.log config.cache config.status
 	-cd binutils/bfd && $(MAKE) distclean
 	-cd binutils/libiberty && $(MAKE) distclean
